recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value level
		avance(length/level)
                              ^Koch:16: error: not found: value level
		avance(length/level)
                              ^Koch:18: error: not found: value level
		avance(length/level)
                              ^Koch:20: error: not found: value level
		avance(length/level)
                              ^