recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
	if (levels>0){
		avance(length/level)
		gauche(60)
		avance(length/level)
		droite(120)
		avance(length/level)
		gauche(60)
		avance(length/level)
		snowSide(levels-1, length/3)
		
	}
}
